--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
 </head>
 <body>
-    <h1>Name</h1>
+    <div>
+        <h2>Name</h2>
     <p>Mykeah Jamie A. Serrano</p>
     <br>
     <br>
 
-    <h1>Role</h1>
+    <h2>Role</h2>
     <p>
         <b>1st Choice:</b> UI/UX Designer
         <br>
@@ -20,14 +22,15 @@
     <br>
     <br>
 
-    <h1>About Me</h1>
+    <h2>About Me</h2>
     <p>
         <b>Age:</b> 19<br>
         <b>Birthday:</b> November 30, 2004<br>
         <b>Course:</b> BSCS - II<br>
         <b>School:</b> Lorma Colleges<br>
-        <b>Interests & Hobbies:</b> Singing, Dancing, Gaming, Futsal
+        <b>Interests & Hobbies:</b> Singing, Dancing, Video Gaming, Futsal
     </p>
+    </div>
 
 </body>
 </html>
