--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
         <b>School:</b> Lorma Colleges<br>
         <b>Interests & Hobbies:</b> Singing, Dancing, Video Gaming, Futsal
     </p>
+    <br>
+    <br>
+
+    <h2>List of Projects</h2>
+    <ul>
+        <li>GymCat</li>
+        <li>HabitQuest</li>
+        <li>VersaPlanner</li>
+        <li>Tabi-Tabi</li>
+    </ul>
     </div>
 
 </body>
